--- a/PlanCheck_IUCT.csproj
+++ b/PlanCheck_IUCT.csproj
@@ -7,7 +7,7 @@
     <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PlanCheck_IUCT</RootNamespace>
-    <AssemblyName>PlanCheck_IUCT_Beta_v7.esapi</AssemblyName>
+    <AssemblyName>PlanCheck_IUCT_Beta_v26.esapi</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -58,6 +58,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Comparator\Result_Status.cs" />
+    <Compile Include="Users\IUCT_Users.cs" />
+    <Compile Include="Users\IUCT_User.cs" />
     <Compile Include="xaml_datas\CheckScreen_Global.xaml.cs">
       <DependentUpon>CheckScreen_Global.xaml</DependentUpon>
     </Compile>
@@ -71,7 +73,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="PlanCheck_IUCT.cs" />
-    <Compile Include="Patient_Info\PlanInformation.cs" />
+    <Compile Include="Preliminaryt_Info\PreliminaryInformation.cs" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="xaml_datas\CheckScreen_Global.xaml">
@@ -87,5 +89,6 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
