--- a/PlanCheck_IUCT.csproj
+++ b/PlanCheck_IUCT.csproj
@@ -7,7 +7,7 @@
     <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PlanCheck_IUCT</RootNamespace>
-    <AssemblyName>PlanCheck_IUCT_Beta_v0055.esapi</AssemblyName>
+    <AssemblyName>PlanCheck_IUCT_Beta_v0059.esapi</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -57,6 +57,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Checks\Check_CT.cs" />
     <Compile Include="Checks\Check_Course.cs" />
     <Compile Include="Comparator\Result_Status.cs" />
     <Compile Include="Users\IUCT_Users.cs" />
