--- a/PlanCheck_IUCT.csproj
+++ b/PlanCheck_IUCT.csproj
@@ -7,7 +7,7 @@
     <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PlanCheck_IUCT</RootNamespace>
-    <AssemblyName>PlanCheck_IUCT_Beta_v0371.esapi</AssemblyName>
+    <AssemblyName>PlanCheck_IUCT_Beta_v0398.esapi</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -60,6 +60,10 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Checks\Check_finalisation.cs" />
+    <Compile Include="Checks\Check_doseDistribution.cs" />
+    <Compile Include="Checks\Check_beams.cs" />
+    <Compile Include="Checks\Check_contours.cs" />
     <Compile Include="Checks\Check_Isocenter.cs" />
     <Compile Include="Checks\Check_UM.cs" />
     <Compile Include="Checks\Check_Prescription.cs" />
@@ -74,7 +78,7 @@
     <Compile Include="xaml_datas\CheckScreen_Item.xaml.cs">
       <DependentUpon>CheckScreen_Item.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Checks\Check_Algorithm.cs" />
+    <Compile Include="Checks\Check_Plan.cs" />
     <Compile Include="Comparator\Comparator.cs" />
     <Compile Include="Comparator\Item_Result.cs" />
     <Compile Include="xaml_datas\MainWindow.xaml.cs">
