--- a/PlanCheck_IUCT.csproj
+++ b/PlanCheck_IUCT.csproj
@@ -7,7 +7,7 @@
     <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PlanCheck_IUCT</RootNamespace>
-    <AssemblyName>PlanCheck_IUCT_Beta_v0523.esapi</AssemblyName>
+    <AssemblyName>PlanCheck_IUCT_Beta_v0525.esapi</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -60,6 +60,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Checks\Check_Plan.cs" />
     <Compile Include="Checks\Check_finalisation.cs" />
     <Compile Include="Checks\Check_doseDistribution.cs" />
     <Compile Include="Checks\Check_beams.cs" />
@@ -79,7 +80,7 @@
     <Compile Include="xaml_datas\CheckScreen_Item.xaml.cs">
       <DependentUpon>CheckScreen_Item.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Checks\Check_Plan.cs" />
+    <Compile Include="Checks\Check_Model.cs" />
     <Compile Include="Comparator\Comparator.cs" />
     <Compile Include="Comparator\Item_Result.cs" />
     <Compile Include="xaml_datas\MainWindow.xaml.cs">
