--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,12 @@ FodyWeavers.xsd
 /Plancheck/PlanCheck_IUCT_Beta_v0582.esapi.dll
 /Plancheck/PlanCheck_IUCT_Beta_v0580.esapi.dll
 /Plancheck/PlanCheck_IUCT_Beta_v0579.esapi.dll
+/Plancheck/PlanCheck_IUCT_Beta_v0596.esapi.dll
+/Plancheck/PlanCheck_IUCT_Beta_v0595.esapi.dll
+/Plancheck/PlanCheck_IUCT_Beta_v0588.esapi.dll
+/Plancheck/PlanCheck_IUCT_Beta_v0589.esapi.dll
+/Plancheck/PlanCheck_IUCT_Beta_v0590.esapi.dll
+/Plancheck/PlanCheck_IUCT_Beta_v0591.esapi.dll
+/Plancheck/PlanCheck_IUCT_Beta_v0592.esapi.dll
+/Plancheck/PlanCheck_IUCT_Beta_v0593.esapi.dll
+/Plancheck/PlanCheck_IUCT_Beta_v0594.esapi.dll
