--- a/PlanCheck_IUCT.csproj
+++ b/PlanCheck_IUCT.csproj
@@ -7,7 +7,7 @@
     <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PlanCheck_IUCT</RootNamespace>
-    <AssemblyName>PlanCheck_IUCT_Beta_v0809.esapi</AssemblyName>
+    <AssemblyName>PlanCheck_IUCT_Beta_v0884.esapi</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -71,6 +71,7 @@
     <Compile Include="Checks\Check_CT.cs" />
     <Compile Include="Checks\Check_Course.cs" />
     <Compile Include="Comparator\Result_Status.cs" />
+    <Compile Include="Excel_reader\DOStructure.cs" />
     <Compile Include="Excel_reader\expectedStructure.cs" />
     <Compile Include="Excel_reader\read_check_protocole.cs" />
     <Compile Include="Users\IUCT_Users.cs" />
