--- a/PlanCheck_IUCT.csproj
+++ b/PlanCheck_IUCT.csproj
@@ -7,7 +7,7 @@
     <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PlanCheck</RootNamespace>
-    <AssemblyName>PlanCheck_Beta_v1141.esapi</AssemblyName>
+    <AssemblyName>PlanCheck_Beta_v1145.esapi</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -89,6 +89,7 @@
     <Compile Include="Excel_reader\DOStructure.cs" />
     <Compile Include="Excel_reader\expectedStructure.cs" />
     <Compile Include="Excel_reader\read_check_protocole.cs" />
+    <Compile Include="Excel_reader\NTO.cs" />
     <Compile Include="Users\IUCT_Users.cs" />
     <Compile Include="Users\IUCT_User.cs" />
     <Compile Include="xaml_datas\CheckScreen_Global.xaml.cs">
